// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen dnGroups config import-export] should create the dnGroups: the dnGroups have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ dngroup => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen dnGroups config import-export] should throw exception when new dnGroups to import miss mandatory properties dnGroups: exception has been thrown 1`] = `
Object {
  "stderr": "Mandatory properties [type] not set in dngroup 'Environment/emptyCfgObjectTest'
Cannot import configuration: some configuration objects' mandatory properties for creation are not set.
",
  "stdout": "",
}
`;

exports[`[mutagen dnGroups config import-export] should update the dnGroups: the dnGroups have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ dngroup => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
